# sidekickAI

./: README.md  main.py  notes.md  pyproject.toml
benchmarks/: main.py
core/: caches.py  dump.py  env.py  messages.py  prompt_values.py  serializable.py  utils.py
core/callbacks/: base.py  manager.py  stdout.py  wandb_callback.py
core/document_loaders/: base.py  blob_loaders.py  design.md  pdf.py
core/document_loaders/parser/: base.py  pdf.py
core/documents/: base.py
core/language_models/: ModelClient.py  base.py  llms.py  model.py
core/outputs/: generation.py  llm_results.py
core/response/: schema.py
core/runnables/: base.py  config.py  utils.py
core/tests/unit_tests/documents/: test_imports.py
core/text_splitters/: base.py  character.py
test/: anthropic_quick_start.py  test.py
